added mamedb scrapper

--- a/projects/frontend/CMakeLists.txt
+++ b/projects/frontend/CMakeLists.txt
@@ -35,7 +35,7 @@ endif()
 find_package(Freetype REQUIRED)
 find_package(FreeImage REQUIRED)
 find_package(SDL2 REQUIRED)
-find_package(Boost REQUIRED COMPONENTS system filesystem date_time)
+find_package(Boost REQUIRED COMPONENTS system filesystem date_time regex)
 find_package(Eigen3 REQUIRED)
 find_package(CURL REQUIRED)
 
