added ogg and mp3 bg music support with sdlmixer

--- a/projects/frontend/CMakeLists.txt
+++ b/projects/frontend/CMakeLists.txt
@@ -34,7 +34,8 @@ else()
 endif()
 find_package(Freetype REQUIRED)
 find_package(FreeImage REQUIRED)
-find_package(SDL2 REQUIRED)
+find_package(SDL2MIXER REQUIRED)
+find_package(SDL2 REQUIRED) 
 find_package(Boost REQUIRED COMPONENTS system filesystem date_time)
 find_package(Eigen3 REQUIRED)
 find_package(CURL REQUIRED)
@@ -137,6 +138,7 @@ set(COMMON_LIBRARIES
     ${FREETYPE_LIBRARIES}
     ${FreeImage_LIBRARIES}
 	${SDL2_LIBRARY}
+	${SDLMIXER_LIBRARY}
     ${CURL_LIBRARIES}
     pugixml
     nanosvg
